--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:h2:mem:codingchallengedb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=jonas
-spring.datasource.password=
+spring.datasource.password=c0d1ngCh4ll3ng32022!!
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
